--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "assets/styles/normalize.css";
+@import "assets/styles/flex-grid.css";
+
+body {
+  background: #f4f4f4;
+  margin: 0;
+}
