--- a/src/app/pages/profile-detail/profile-detail.component.html
+++ b/src/app/pages/profile-detail/profile-detail.component.html
@@ -3,10 +3,10 @@
     <mat-card style="margin: 12px;">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-card-title>BDKNSSS</mat-card-title>
+        <mat-card-subtitle>Sutulaya sobaka</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+      <img mat-card-image src="https://i.kinja-img.com/gawker-media/image/upload/s--Xm76gqZZ--/c_scale,f_auto,fl_progressive,q_80,w_800/19bbfcaozas2kjpg.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
         <p>
           The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
